<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.PermissionFragment">

        <TextView
            android:id="@+id/text_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_instructions"
            android:layout_margin="16dp"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:id="@+id/ll_accesscibility_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/no_access_permission"
                android:paddingHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_accessibility_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_accessibility_permission"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/button_accessibility_permission"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_configuration"
                    android:text="@string/button_setting" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:id="@+id/ll_power_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/no_access_permission"
                android:paddingHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_power_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_power_permission"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/button_power_permission"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_configuration"
                    android:text="@string/button_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_power_permission" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_rom_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_rom_battery"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_task_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/text_task_manager"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="完 成" />
    </LinearLayout>
</layout>